--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "eslint-plugin-prettier": "^3.1.3",
+    "graphql-tag": "^2.10.3",
     "phoenix": "^1.5.1",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
