--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,5 +47,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@apollo/react-testing": "^3.1.4",
+    "@testing-library/react": "^10.0.4",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "wait-for-expect": "^3.0.2"
+  },
+  "resolutions": {
+    "jest-environment-jsdom": "^26.0.1"
   }
 }
